--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,8 @@
 title: "Istituto Rosetano per la Ricerca e la Scienza dei Dati"
 ---
 
-I giovani delle piccole città spesso imparano competenze emergenti in ricerca e scienza dei dati in ritardo rispetto ai loro coetanei nei grandi centri urbani \[Ref.\]. Questo limita le opportunita dei giovani from small towns nell' intraprendere carriere scientifiche globali.
+I giovani delle piccole città spesso acquisiscono competenze emergenti in ricerca e scienza dei dati con ritardo rispetto ai loro coetanei nei grandi centri urbani \[Ref.\]. Questo limita le opportunità per i giovani di piccole comunità di intraprendere carriere scientifiche a livello globale.
 
-Questo documento presenta un piano per la fondazione dell'Istituto Rosetano di Ricerca e Scienza dei Dati (Roseto Institute for Research and Data Science), un'organizzazione educativa e di ricerca dedicata alla promozione della scienza dei dati, della statistica e dell'educazione alla ricerca. L'Istituto si propone di potenziare gli studenti locali offrendo borse di studio, tutoraggio e risorse per condurre progetti di ricerca a livello di world-class universities. L'obiettivo a lungo termine è trasformare l'Istituto in un centro rinomato per la scienza dei dati e la ricerca che prepara gli studenti locali ad intraprendere carriere scientifiche globali.
-
-![](images/DALL·E 2024-08-19 23.03.32 - A modern research and data science institute set in Roseto degli Abruzzi, Italy. The institute building is futuristic with large glass windows and cle.webp){width="351"}
+Questo documento presenta un piano per la fondazione dell'Istituto Rosetano di Ricerca e Scienza dei Dati (Roseto Institute for Research and Data Science), un'organizzazione educativa e di ricerca dedicata alla promozione della scienza dei dati, della statistica e dell'educazione alla ricerca. L'Istituto si propone di potenziare gli studenti locali offrendo borse di studio, tutoraggio e risorse per condurre progetti di ricerca a livello delle top universita' del mondo. L'obiettivo a lungo termine è di formare un centro per la scienza dei dati e la ricerca che prepara gli studenti ad intraprendere carriere scientifiche globali. Servizi secondari includono training per executives, utilizzo di dati per attivita' locali etc. Fantastico se si fanno a Roseto alcuni passi per farla diventare smart city: sensori che misurano x e y; con bici ovunque; energia dal sole / mare; riduzione auto vecchie; etc.
 
 ![](images/DALL·E 2024-08-19 23.12.59 - A modest research and data science institute set in Roseto degli Abruzzi, Italy. The building is simple and functional, with a modern but unpretentiou.webp){width="353"}
