--- a/index.qmd
+++ b/index.qmd
@@ -7,3 +7,15 @@ I giovani delle piccole città spesso acquisiscono competenze emergenti in ricer
 Questo documento presenta un piano per la fondazione dell'Istituto Rosetano di Ricerca e Scienza dei Dati (Roseto Institute for Research and Data Science), un'organizzazione educativa e di ricerca dedicata alla promozione della scienza dei dati, della statistica e dell'educazione alla ricerca. L'Istituto si propone di potenziare gli studenti locali offrendo borse di studio, tutoraggio e risorse per condurre progetti di ricerca a livello delle top universita' del mondo. L'obiettivo a lungo termine è di formare un centro per la scienza dei dati e la ricerca che prepara gli studenti ad intraprendere carriere scientifiche globali. Servizi secondari includono training per executives, utilizzo di dati per attivita' locali etc. Fantastico se si fanno a Roseto alcuni passi per farla diventare smart city: sensori che misurano x e y; con bici ovunque; energia dal sole / mare; riduzione auto vecchie; etc.
 
 ![](images/DALL·E 2024-08-19 23.12.59 - A modest research and data science institute set in Roseto degli Abruzzi, Italy. The building is simple and functional, with a modern but unpretentiou.webp){width="353"}
+
+#### Obiettivi:
+
+-   Assegnare borse di studio annuali di €1.000 a studenti delle scuole superiori per progetti di ricerca eccezionali in statistica e scienza dei dati con implicazioni pratiche.
+
+-   Fornire tutoraggio e supporto agli studenti nella progettazione e realizzazione di progetti di ricerca basati sui dati.
+
+-   Realizzare workshop sulla scienza dei dati, la programmazione e le metodologie di ricerca.
+
+-   Assistere gli studenti nell'esplorazione e nella candidatura per opportunità educative e/o professionali all'estero.
+
+-   Creare una comunità di studenti, educatori e ricercatori dedicati all'indagine scientifica e alla scienza dei dati.
