--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,10 @@
 title: "Istituto Rosetano per la Ricerca e la Scienza dei Dati"
 ---
 
+Idea base: offrire consulenza personalizzata a studenti locali che vogliono intraprendere carriere scientifiche a livello globale; corsi online free e non; training/workshops.
+
+#### Descrizione:
+
 I giovani delle piccole città tendono ad acquisire competenze scientifiche nel campo della ricerca e della scienza dei dati con ritardo rispetto ai loro coetanei nei grandi centri urbani \[Ref.\]. Questo limita le opportunità per i giovani di piccole comunità di intraprendere carriere scientifiche a livello globale.
 
 Questo documento presenta un piano per la fondazione dell'Istituto Rosetano di Ricerca e Scienza dei Dati (Roseto Institute for Research and Data Science), un'organizzazione educativa e di ricerca dedicata alla promozione della scienza dei dati, della statistica e dell'educazione alla ricerca. L'Istituto mira a valorizzare il talento degli studenti locali, offrendo borse di studio, tutoraggio e risorse per condurre progetti di ricerca di eccellenza, in linea con gli standard delle migliori università mondiali.
