--- a/courses.qmd
+++ b/courses.qmd
@@ -2,12 +2,14 @@
 title: "Courses"
 ---
 
--   Best programming practices in human-subjects research
+-   Introduction to data science with R
 
 -   Statistical models for empirical research
 
--   Introduction to data science with R
-
--   How to publish scientific research
+-   Design of experiments
 
 -   Data visualization and communication
+
+-   Programming practices in human-subjects research
+
+-   How to publish scientific research
