--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Istituto Rosetano per la Ricerca e la Scienza dei Dati"
 ---
 
-Idea base: offrire consulenza personalizzata a studenti locali che vogliono intraprendere carriere scientifiche a livello globale; corsi online free e non; training/workshops.
+Idea base: offrire consulenza personalizzata a studenti che vogliono intraprendere carriere scientifiche a livello globale; giovani professionisti che vogliono acquisire nuove competenze; offerta di corsi online free e non; training/workshops.
 
 #### Descrizione:
 
