--- a/index.qmd
+++ b/index.qmd
@@ -1,31 +1,18 @@
 ---
-title: "Istituto Rosetano per la Ricerca e la Scienza dei Dati"
+title: ""
+about:
+  template: jolla
+  image: profile.jpg
+  links:
+    - icon: github
+      text: Github
+      href: https://github.com
 ---
 
-Idea base: offrire consulenza personalizzata a studenti che vogliono intraprendere carriere scientifiche a livello globale; giovani professionisti che vogliono acquisire nuove competenze; offerta di corsi online free e non; training/workshops.
+Hello, my name is Finley Malloch and I am a postdoctoral researcher based in Toronto. Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
 
-#### Descrizione:
+## Experience
 
-I giovani delle piccole città tendono ad acquisire competenze nel campo della ricerca e della scienza dei dati con ritardo rispetto ai loro coetanei nei grandi centri urbani \[Ref.\]. Questo ritardo limita le opportunità per i giovani di piccole comunità di intraprendere carriere scientifiche a livello globale.
+Wengo Analytics \| Head Data Scientist \| April 2018 - present
 
-Questo documento presenta un piano per la fondazione dell'Istituto Rosetano di Ricerca e Scienza dei Dati (Roseto Institute for Research and Data Science), un'organizzazione dedicata alla promozione della scienza dei dati, della statistica e dell'educazione alla ricerca. L'Istituto mira a valorizzare il talento degli studenti locali, offrendo borse di studio, tutoraggio e risorse per condurre progetti di ricerca in linea con gli standard delle migliori università mondiali.
-
-L'obiettivo a lungo termine è creare un centro d'eccellenza per la ricerca e scienza dei dati, capace di preparare gli studenti a intraprendere carriere scientifiche di respiro internazionale. Alcune attività complementari includono la formazione per executives, l'applicazione dei dati per lo sviluppo di iniziative locali, altro. Un progetto futuro potrebbe includere la promozione di Roseto in una piccola smart city, con l'installazione di sensori per monitorare variabili chiave, l'incentivazione dell'uso di treni e biciclette, l'energia prodotta da fonti rinnovabili come il sole e il mare, e la riduzione delle auto vecchie/inquinanti etc.
-
-![Palazzo del mare futura sede.](images/DALL·E 2024-08-19 23.12.59 - A modest research and data science institute set in Roseto degli Abruzzi, Italy. The building is simple and functional, with a modern but unpretentiou.webp){fig-align="left" width="353"}
-
-#### Obiettivi:
-
--   Realizzare workshop sulla scienza dei dati, la programmazione e le metodologie di ricerca.
-
--   Fornire tutoraggio e supporto agli studenti nella progettazione e realizzazione di progetti di ricerca basati sui dati.
-
--   Assegnare borse di studio annuali di €1.000 a studenti delle scuole superiori per progetti di ricerca in statistica e scienza dei dati.
-
--   Assistere gli studenti nell'esplorazione e nella candidatura per opportunità educative e/o professionali all'estero.
-
--   Creare una comunità di studenti, educatori e ricercatori dedicati all'indagine scientifica e alla scienza dei dati.
-
-#### Requisiti:
-
--   Breve test di ammissione per valutare competenze linguistiche, di cultura generale e scientifiche.
+GeoScynce \| Chief Analyst \| Spet 2012 - April 2018
