--- a/work.qmd
+++ b/work.qmd
@@ -1,6 +1,14 @@
 ---
 title: "Work"
 listing:
-
+  contents: workposts
+  sort: "date desc"
   type: default
+  categories: true
+  sort-ui: false
+  filter-ui: false
+page-layout: full
+title-block-banner: true
 ---
+
+Here is a list of projects I've worked on.
