--- a/blog.qmd
+++ b/blog.qmd
@@ -1,6 +1,12 @@
 ---
 title: "Blog"
 listing:
-  type: table
-  fields: [image, date, title, author, reading-time]
+  contents: blogposts
+  sort: "date desc"
+  type: default
+  categories: true
+  sort-ui: false
+  filter-ui: false
+page-layout: full
+title-block-banner: true
 ---
