--- a/index.qmd
+++ b/index.qmd
@@ -2,17 +2,11 @@
 title: ""
 about:
   template: jolla
-  image: profile.jpg
+  image: profile.webp
   links:
     - icon: github
       text: Github
       href: https://github.com
 ---
 
-Hello, my name is Finley Malloch and I am a postdoctoral researcher based in Toronto. Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
-
-## Experience
-
-Wengo Analytics \| Head Data Scientist \| April 2018 - present
-
-GeoScynce \| Chief Analyst \| Spet 2012 - April 2018
+Hello.
