--- a/index.qmd
+++ b/index.qmd
@@ -9,4 +9,4 @@ about:
       href: https://github.com
 ---
 
-Hello.
+Databruzzo is a collection of resources dedicated to using causal inference to find the signal through the noise.
