--- a/about.qmd
+++ b/about.qmd
@@ -1,7 +1,11 @@
 ---
-title: "About"
+title: "about"
 ---
 
-Databruzzo is a collection of resources dedicated to using causal inference to detect the signal in the noise.
+👋 hello, my name is davide gentile
 
-The terms "signal" and "noise" are borrowed from Signal Detection Theory (SDT). SDT is a framework used to measure the ability to differentiate between important information (the signal) from irrelevant information (the noise).
+i am a **data scientist** who uses causal inference to detect the signal in the noise
+
+i currently **lead the experimental team** in the cognitive engineering lab at the university of toronto. i have previously worked as independent **data science consultant** at armilla ai, as **research intern** at ericsson, and as **researcher** at the center for advanced research on applied and experimental linguistics
+
+the terms "signal" and "noise" are borrowed from signal detection theory, a framework used to measure the ability to differentiate between important information (the signal) from irrelevant information (the noise)
