--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,136 @@
 ---
-title: ""
+title: "Davide Gentile"
 about:
   template: jolla
   image: profile.webp
   links:
     - icon: file-earmark-person
-      text: resume
+      text: LinkedIn
       href: resume.pdf
 ---
 
-causal inference for detecting the signal in the noise
+Data scientist with a passion for causal inference and empowering others to detect the signal in the noise.
+
+<main class="content column-page" id="quarto-document-content">
+
+<!-- <div class="banner"> -->
+
+<!-- <div class="quarto-figure quarto-figure-center"> -->
+
+<!-- <figure class="figure"> -->
+
+<!-- <p><img src="image/danielle-4.jpg" class="circular img-fluid figure-img" alt="Greyscale profile  photo of the author with generative art superimposed." width="300"></p> -->
+
+<!-- </figure> -->
+
+<!-- </div> -->
+
+<!-- <section id="danielle-navarro" class="level1 centered"> -->
+
+<!-- <h1>Danielle Navarro</h1> -->
+
+<!-- <p>Data scientist, recovering academic, and generative artist. Originally a mathematical psychologist, worked in tech for a bit, now a statistics lady in pharmacometrics. Author of various books, papers, and so forth. Chronic email ignorer.</p> -->
+
+<!-- </section> -->
+
+<!-- </div> -->
+
+::: grid
+::: {.g-col-12 .g-col-md-6 .g-col-xl-4}
+::: {.card .h-100}
+<a href="https://gentiled.github.io/projects.html/"><img src="image/blog-site-splash.jpg" alt="A pretty rainbow colour wheel that I created as part of a blog post." class="card-img-top"/></a>
+
+::: card-body
+<h2 class="card-title anchored" id="projects">
+
+Projects <a class="anchorjs-link " aria-label="Anchor" data-anchorjs-icon="" href="#projects" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
+
+</h2>
+
+<p class="card-text">
+
+I write a data science blog, "Notes from a data witch". It covers a variety of topics including R, Python, Apache Arrow, Linux, and many other things related to data analysis workflows
+
+</p>
+:::
+
+::: card-footer
+<p><a href="https://gentiled.github.io/projects.html/" class="btn btn-primary">gentiled.github.io/projects</a></p>
+:::
+:::
+:::
+
+::: {.g-col-12 .g-col-md-6 .g-col-xl-4}
+::: {.card .h-100}
+<a href="https://art.djnavarro.net/"><img src="image/art-site-splash.jpg" alt="Generative art showing swirls of yellow against a grey background." class="card-img-top"/></a>
+
+::: card-body
+<h2 class="card-title anchored" id="generative-art">
+
+Data science blog <a class="anchorjs-link " aria-label="Anchor" data-anchorjs-icon="" href="#generative-art" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
+
+</h2>
+
+<p class="card-text">
+
+I have a generative art website where I post various art series under creative commons licences. For some series the source code is also available on github.
+
+</p>
+:::
+
+::: card-footer
+<p><a href="https://art.djnavarro.net/" class="btn btn-primary">art.djnavarro.net</a></p>
+:::
+:::
+:::
+
+::: {.g-col-12 .g-col-md-6 .g-col-xl-4}
+::: {.card .h-100}
+<a href="https://papers.djnavarro.net/"><img src="image/papers-splash.jpg" alt="Many sheets of white paper laid out semi-randomly." class="card-img-top"/></a>
+
+::: card-body
+<h2 class="card-title anchored" id="academic-work">
+
+Research <a class="anchorjs-link " aria-label="Anchor" data-anchorjs-icon="" href="#academic-work" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
+
+</h2>
+
+<p class="card-text">
+
+In a former life I was a tenured academic. I wrote over 100 peer-reviewed papers and 4 books, and have an h-index in the 30s. I was even on the Board of Reviewing Editors at Science for a while. Out of habit I keep a (somewhat) up to date archive of my scientific papers.
+
+</p>
+:::
+
+::: card-footer
+<p><a href="https://papers.djnavarro.net/" class="btn btn-primary">papers.djnavarro.net</a></p>
+:::
+:::
+:::
+
+::: {.g-col-12 .g-col-md-6 .g-col-xl-4}
+::: {.card .h-100}
+<a href="https://slides.djnavarro.net/"><img src="image/slides-splash.jpg" alt="Old-fashioned projector slides, with the title &apos;Data science slide decks&apos;." class="card-img-top"/></a>
+
+::: card-body
+<h2 class="card-title anchored" id="data-science-slides">
+
+Courses <a class="anchorjs-link " aria-label="Anchor" data-anchorjs-icon="" href="#data-science-slides" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
+
+</h2>
+
+<p class="card-text">
+
+My data science slide decks --- some of them, at least --- are hosted on their own site. They cover a variety of topics in R, Apache Arrow, data science, and practical details of project oriented workflow.
+
+</p>
+:::
+
+::: card-footer
+<p><a href="https://slides.djnavarro.net/" class="btn btn-primary">slides.djnavarro.net</a></p>
+:::
+:::
+:::
+:::
+
+</main>
