--- a/about.qmd
+++ b/about.qmd
@@ -1,11 +1,11 @@
 ---
-title: "about"
+title: "About"
 ---
 
-👋 hello, my name is davide gentile
+👋 Hello, my name is davide gentile
 
-i am a **data scientist** specialized in statistics, experimental design and human subjects research
+I am a **data scientist** specializing in statistics, experimental design and human subjects research
 
-currently i **lead the experimental team** in the cognitive engineering laboratory at the university of toronto. i have previously worked as independent **data science consultant** at armilla ai, as **research intern** at ericsson, and as **researcher** at the center for advanced research on applied and experimental linguistics
+I currently **lead the experimental and analytical teams** in the cognitive engineering lab at the university of toronto. I have previously worked as independent **data science consultant** at armilla ai, as **research intern** at ericsson, and as **researcher** in the reading lab at mcmaster university's center for advanced research in experimental and applied linguistics
 
-the terms 'signal' and 'noise' are borrowed from *signal detection theory*, a framework used to measure the ability to differentiate between important information (the signal) from irrelevant information (the noise)
+Since 2024 i hold a phd in industrial engineering from the university of toronto, focused on human performance modeling in operation of explainable ai displays for automated decision assistance
