--- a/index.qmd
+++ b/index.qmd
@@ -1,113 +1,22 @@
 ---
-title: ""
+title: "Davide Gentile"
 about:
-  template: jolla
+  template: trestles
   image: profile.webp
   links:
     - icon: file-earmark-person
-      text: LinkedIn
+      text: Resume
       href: https://www.linkedin.com/in/davide-gentile-/
 ---
 
-Data scientist with a passion for using causal inference to detect the signal in the noise.
+Data scientist specializing in statistics, experimental design, and human-subjects research. I apply causal inference to detect signals in the noise.
 
-<main class="content column-page" id="quarto-document-content">
-
-<!-- <div class="banner"> -->
-
-<!-- <div class="quarto-figure quarto-figure-center"> -->
-
-<!-- <figure class="figure"> -->
-
-<!-- <p><img src="image/danielle-4.jpg" class="circular img-fluid figure-img" alt="Greyscale profile  photo of the author with generative art superimposed." width="300"></p> -->
-
-<!-- </figure> -->
-
-<!-- </div> -->
-
-<!-- <section id="danielle-navarro" class="level1 centered"> -->
-
-<!-- <h1>Danielle Navarro</h1> -->
-
-<!-- <p>Data scientist, recovering academic, and generative artist. Originally a mathematical psychologist, worked in tech for a bit, now a statistics lady in pharmacometrics. Author of various books, papers, and so forth. Chronic email ignorer.</p> -->
-
-<!-- </section> -->
-
-<!-- </div> -->
-
-::: grid
-
-::: {.g-col-12 .g-col-md-6 .g-col-xl-4}
-::: {.card .h-100}
-<a href="https://gentiled.github.io/projects/"><img src="images/projects.webp" alt="Generative art showing swirls of yellow against a grey background." class="card-img-top"/></a>
-
-::: card-body
-<h2 class="card-title anchored" id="projects">
-
-projects <a class="anchorjs-link " aria-label="Anchor" data-anchorjs-icon="" href="#projects" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
-
-</h2>
-
-<p class="card-text">
-
-Selected data science projects I've worked on, with available R code. 
-
-</p>
-:::
-
-::: card-footer
-<p><a href="https://gentiled.github.io/projects/" class="btn btn-primary">gentiled.github.io/projects</a></p>
-:::
-:::
-:::
-
-::: {.g-col-12 .g-col-md-6 .g-col-xl-4}
-::: {.card .h-100}
-<a href="https://gentiled.github.io/blog/"><img src="images/thoughts.webp" alt="Many sheets of white paper laid out semi-randomly." class="card-img-top"/></a>
-
-::: card-body
-<h2 class="card-title anchored" id="academic-work">
-
-posts <a class="anchorjs-link " aria-label="Anchor" data-anchorjs-icon="" href="#blog" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
-
-</h2>
-
-<p class="card-text">
-
-Some thoughts and notes on topics in data science, R, and human factors research.
-
-</p>
-:::
-
-::: card-footer
-<p><a href="https://gentiled.github.io/blog/" class="btn btn-primary">gentiled.github.io/blog</a></p>
-:::
-:::
-:::
-
-::: {.g-col-12 .g-col-md-6 .g-col-xl-4}
-::: {.card .h-100}
-<a href="https://gentiled.github.io/research/"><img src="image/slides-splash.jpg" alt="Old-fashioned projector slides, with the title &apos;Data science slide decks&apos;." class="card-img-top"/></a>
-
-::: card-body
-<h2 class="card-title anchored" id="research">
-
-research <a class="anchorjs-link " aria-label="Anchor" data-anchorjs-icon="" href="#research" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a>
-
-</h2>
-
-<p class="card-text">
-
-A collection of my academic work and resources on research methods, statistics, and R. 
-
-</p>
-:::
-
-::: card-footer
-<p><a href="https://gentiled.github.io/research/" class="btn btn-primary">gentiled.github.io/research</a></p>
-:::
-:::
-:::
-:::
-
-</main>
++-------------------------------------------------+
+| #### My sites                                   |
++-------------------------------------------------+
+| [Projects](https://gentiled.github.io/work)     |
++-------------------------------------------------+
+| [Posts](https://gentiled.github.io/blog)        |
++-------------------------------------------------+
+| [Research](https://gentiled.github.io/research) |
++-------------------------------------------------+
