--- a/work.qmd
+++ b/work.qmd
@@ -3,7 +3,8 @@ title: "projects"
 listing:
   contents: workposts
   sort: "date desc"
-  type: default
+  type: grid
+  fields: [image, date, title, categories]
   categories: true
   sort-ui: false
   filter-ui: false
