--- a/blog.qmd
+++ b/blog.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Posts"
-subtitle: "Some thoughts and notes on causal inference, R, and human factors research"
+subtitle: "Some thoughts on causal inference, R, and human factors research"
 listing:
   contents: blogposts
   sort: "date desc"
