--- a/about.qmd
+++ b/about.qmd
@@ -5,22 +5,25 @@ about:
   template: trestles
   image-shape: rectangle
   links:
+    # - icon: "{{< iconify simple-icons:googlescholar >}}"
+    #   text: "{{< iconify simple-icons:googlescholar >}} Google scholar"
+    #   href: https://scholar.google.com/citations?user=hpdB69EAAAAJ&hl=en
     - icon: linkedin
       text: LinkedIn
-      href: https://github.com
+      href: https://www.linkedin.com/in/davide-gentile-/
     - icon: spotify
       text: Spotify
-      href: https://github.com
+      href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-👋 Hello, my name is davide gentile
+👋 Hello,
 
-I am a **data scientist** specializing in statistics, experimental design and human subjects research
+I am a **data scientist** specializing in statistics, machine learning, and human-subjects experiments
 
-I currently **lead the experimental and analytical teams** in the cognitive engineering lab at the university of toronto. I have previously worked as independent **data science consultant** at armilla ai, and as **research intern** at ericsson
+I lead the **experimental and analytical teams** in the cognitive engineering lab at the university of toronto. Previously, I worked as **data science consultant** at armilla ai, as **research intern** at ericsson, and as teaching assistant in **statistics** and **human factors** at the university of toronto
 
-Since july 2024 i hold a phd in industrial engineering from the university of toronto, focused on human performance modeling in operation of explainable ai displays for automated decision assistance
+Since july 2024 i hold a phd in industrial engineering from the university of toronto, focused on evaluating the impact of explainability on human performance in automated decision assistance
 
-During my phd i also had the pleasure to train 400+ engineering students in **statistics** and **human factors engineering**
+I built this website to collect personal projects, thoughts and resources
 
-The picture was taken at panixerpasshütte (2407 m), a mountain cabin in glarus süd, switzerland, on august 30th 2024 around 9 pm
+The picture was taken at panixerpasshütte (🏔️ 2407 m), a mountain cabin in glarus süd, switzerland, on august 30th 2024 around 9 pm
