--- a/about.qmd
+++ b/about.qmd
@@ -8,22 +8,20 @@ about:
     # - icon: "{{< iconify simple-icons:googlescholar >}}"
     #   text: "{{< iconify simple-icons:googlescholar >}} Google scholar"
     #   href: https://scholar.google.com/citations?user=hpdB69EAAAAJ&hl=en
-    - icon: linkedin
-      text: LinkedIn
-      href: https://www.linkedin.com/in/davide-gentile-/
+    # - icon: linkedin
+    #   text: LinkedIn
+    #   href: https://www.linkedin.com/in/davide-gentile-/
     - icon: spotify
       text: Spotify
       href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-👋 Hello,
+👋 Hello, my name is davide gentile
 
-I am a **data scientist** specializing in statistics, machine learning, and human-subjects experiments
+I'm a researcher specializing in statistics, machine learning, and human-subjects experiments
 
-I lead the **experimental and analytical teams** in the cognitive engineering lab at the university of toronto. Previously, I worked as **data science consultant** at armilla ai, as **research intern** at ericsson, and as teaching assistant in **statistics** and **human factors** at the university of toronto
+Over the past few years, I've led and contributed to diverse projects, publications, and student mentoring initiatives. I currently **lead two research teams** in experiments to inform regulations on human performance in monitoring and control of small modular reactors. I've previosuly worked as **data science consultant** at a AI/insurtech startup, and as **research intern** at a large telecom company
 
-Since july 2024 i hold a phd in industrial engineering from the university of toronto, focused on evaluating the impact of explainability on human performance in automated decision assistance
-
-I built this website to collect personal projects, thoughts and resources
+Since july 2024 i hold a phd in industrial engineering from the university of toronto. During my phd, i've had the pleasure to train 400+ engineering students in **statistics** and **human factors**
 
 The picture was taken at panixerpasshütte (🏔️ 2407 m), a mountain cabin in glarus süd, switzerland, on august 30th 2024 around 9 pm
