--- a/workposts/driving-data/index.qmd
+++ b/workposts/driving-data/index.qmd
@@ -1,21 +1,32 @@
 ---
-title: "Usability study of explainable AI displays to support productivity of Ericsson's data scientists"
+title: "Driving analytics for risk assessment in usage-based insurance"
 author: "Davide Gentile"
 date: "2024-09-18"
-categories: [research]
+categories: [code, analysis]
 image: "image.jpg"
 ---
 
-This research is published in the journal Ergonomics in design.
-
-Find it here.
+This is a time series analysis
 
 📄 [Report](resume.pdf)
 
 📊 [Slides](resume.pdf)
 
 ```{r}
-1 + 1
+# Libraries
+library(ggplot2)
+library(dplyr)
+
+# Load dataset from github
+data <- read.table("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/3_TwoNumOrdered.csv", header=T)
+data$date <- as.Date(data$date)
+
+# Plot
+data %>%
+  tail(10) %>%
+  ggplot( aes(x=date, y=value)) +
+    geom_line() +
+    geom_point()
 ```
 
 ### 
