--- a/workposts/ericsson-project/index.qmd
+++ b/workposts/ericsson-project/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Welcome To My Blog"
-author: "Tristan O'Malley"
-date: "2024-09-12"
+title: "User study on explainable AI software to support productivity of Ericsson's data scientists"
+author: "Davide Gentile"
+date: "2024-08-12"
 categories: [news]
 ---
 
